<resources>
    <string name="app_name">Cloudshelf SDK Sample App</string>
    <string name="add_note">Add Note</string>
    <string name="welcome_carousel_0">Read EPUB3 ebooks and take great\nnotes with Cloudshelf Reader</string>
    <string name="welcome_carousel_1">Enjoy ebooks that contain audio, video\nand interactive content</string>
    <string name="welcome_carousel_2">Import your own ebooks or use the\n“Open In…” feature from other apps</string>
    <string name="powered_by_bluefire">Powered by Bluefire</string>
    <string name="quick_tips">Quick Tips</string>
    <string name="importing_books">Importing Books</string>
    <string name="importing_books_description">You can sign-in to your Dropbox account directly from inside Cloudshelf and download .epub books to your Library. You can also use the “Open In…” Menu and choose Cloudshelf from email or many other applications.</string>
    <string name="swipe_to_edit">Swipe to Edit Marks &amp; Notes</string>
    <string name="swipe_to_edit_description">You can delete or modify Bookmarks, Notes and Sketches by wiping left on the list item row to access the menu.</string>
    <string name="removing_books">Removing Books\nfrom your Library</string>
    <string name="removing_books_description">Remove a book from your Library by choosing List View, then swiping left on a row to access the Delete button.</string>
    <string name="opacity_in_sketches">Opacity in Sketches</string>
    <string name="opacity_in_sketches_description">You can modify the Opacity of the Canvas in Sketches to se through to the book page below it. Keep in mind that Cloudshelf retains your sketch at the view size and orientation when it was created.</string>
    <string name="page_number_display">Page %1$d of %2$d</string>
    <string name="page_number_display_preview">Page 4 of 375</string>
    <string name="menu_book_search">Search</string>
    <string name="menu_book_settings">Settings</string>
    <string name="menu_book_bookmark">Bookmark</string>
    <string name="menu_book_locations">Locations</string>
    <string name="menu_table_of_contents">Table of Contents</string>
    <string name="book_info_actionbar_text">Book Info</string>
    <string name="book_info_heading_history">HISTORY</string>
    <string name="book_info_heading_license">LICENSE AND RIGHTS</string>
    <string name="settings_text_size_title">Text Size</string>
    <string name="settings_margin_width_title">Margin Width</string>
    <string name="settings_justified_text_title">Justified Text</string>
    <string name="settings_column_mode_title">Column Layout</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_tap_to_play_title">Tap to Play</string>
    <string name="column_mode_default">Default</string>
    <string name="column_mode_single">Single</string>
    <string name="column_mode_double">Double</string>
    <string name="identifier_column_mode_default">column_mode_default</string>
    <string name="identifier_column_mode_single">column_mode_single</string>
    <string name="identifier_column_mode_double">column_mode_double</string>
    <string name="theme_name_default">Default</string>
    <string name="theme_name_night">Night</string>
    <string name="theme_name_sepia">Sepia</string>
    <string name="identifier_theme_default">theme_default</string>
    <string name="identifier_theme_night">theme_night</string>
    <string name="identifier_theme_sepia">theme_sepia</string>
    <string name="settings_switch_on">On</string>
    <string name="settings_switch_off">Off</string>
    <string name="settings_adv_title">Advanced Settings</string>
    <string name="settings_adv_desc">Advanced settings override the publisher\'s formatting</string>
    <string name="settings_night_mode_title">Night Mode</string>
    <string name="settings_page_turn_title">Page Turn</string>
    <string name="settings_brightness_title">Brightness</string>
    <string name="settings_orientation_lock_title">Orientation Lock</string>
    <string name="settings_page_number_title">Page # in Margin</string>
    <string name="settings_line_space_title">Line Spacing</string>
    <string name="settings_font_title">Font Face</string>
    <string name="settings_screensaver_block_title">Sleep Mode Override</string>
    <string name="settings_screensaver_block_desc">Stops screen sleep mode in reading view.</string>
    <string name="settings_minus_name">subtract</string>
    <string name="settings_plus_name">add</string>
    <string name="settings_reading_settings_title">Reading Settings</string>
    <string name="settings_audio_settings_title">Audio Settings</string>
    <string name="settings_study_tools_title">Study Tools</string>
    <string name="settings_volume_title">Volume</string>
    <string name="settings_audio_tempo_title">Audio Tempo</string>
    <string name="settings_read_along_color_title">Read Along Color</string>
    <string name="settings_auto_page_turn_title">Auto Page Turn</string>
    <string name="local"></string>
    <string name="home">Welcome</string>
    <string name="downloaded_items">Library</string>
    <string name="home_page">Welcome</string>
    <string name="shelf_libraries"></string>
    <string name="epub_error_title">EPUB Warning</string>
    <string name="drm_fail_msg_title">DRM Error</string>
    <string name="book_navi_contents">Contents</string>
    <string name="book_navi_bookmarks">Bookmarks</string>
    <string name="book_navi_info">Book Info</string>
    <string name="shelf_info_actionbar_text">%1$s Info</string>
    <string name="shelf_info_bookshelf_desc_title">Bookshelf Description</string>
    <string name="shelf_info_contact_title">Contact Information</string>
    <string name="shelf_info_dist_by">Distributed By: %1$s</string>
    <string name="shelf_info_contact_email">Contact Email: %1$s</string>
    <string name="shelf_unsubscribe">Unsubscribe</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_info">Info</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_list_toggle">Display Mode</string>
    <string name="home_advert_url">http://www.bluefirereader.com/internal/advertising/ipad/</string>
    <string name="app_scheme">cloudshelfreader</string>
    <string name="scheme_open_book">read</string>
    <string name="landing_button_sign_in">Sign In</string>
    <string name="landing_button_as_guest">Continue As Guest</string>
    <string name="ad_copy_one">CloudShelf allows invited users to view shared documents – for work, school or play</string>
    <string name="ad_copy_two">CloudShelf helps businesses, organizations, institutions and individuals distribute content to their constituents and friends</string>
    <string name="app_info_account_title">ACCOUNT</string>
    <string name="app_info_device_reg_title">Device Registration</string>
    <string name="app_info_device_reg_list">This device, application and content is registered to: \n - %1$s</string>
    <string name="app_info_register_button">Register</string>
    <string name="app_info_signout_button">Sign Out</string>
    <string name="app_info_help_section_title">HELP</string>
    <string name="app_info_help_title">App Help</string>
    <string name="app_info_help_text">Refer to the User Guide provided in "Resources" for help using this app. If you have a support question, email us at: %1$s</string>
    <string name="app_info_info_section_title">APP INFO</string>
    <string name="app_info_about_title">About "%1$s"</string>
    <string name="app_info_about_text">Version %1$s | &#169; Bluefire Productions, LLC. All Rights Reserved. \n Contains  Sony&#174; DADC&#8482; Digital Rights Management Software</string>
    <string name="settings_sort_title">Sort Options</string>
    <string name="display_all_books">All Books</string>
    <string name="display_downloaded">Downloaded Only</string>
    <string name="sort_recent">Recent</string>
    <string name="sort_title">Title</string>
    <string name="sort_author">Author</string>
    <string name="settings_show_book_title">Show Book</string>
    <string name="action_settings">Settings</string>
    <string name="add_bookmark_prompt_placeholder">Name</string>
    <string name="add_bookmark_prompt_title">Add Bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="delete_bookmark">Do you want to delete this bookmark?</string>
    <string name="bookmarks_with_count">Bookmarks (%1$d)</string>
    <string name="container_list_title">Cloudshelf Reader SDK Sample Application</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_ok">OK</string>
    <string name="list_of_figures">List of Figures</string>
    <string name="list_of_illustrations">List of Illustrations</string>
    <string name="list_of_tables">List of Tables</string>
    <string name="metadata">Metadata</string>
    <string name="metadata_authors">Authors: %1$s</string>
    <string name="metadata_copyright_owner">Copyright Owner: %1$s</string>
    <string name="metadata_full_title">Full Title: %1$s</string>
    <string name="metadata_isbn">ISBN: %1$s</string>
    <string name="metadata_language">Language: %1$s</string>
    <string name="metadata_modification_date">Modification Date: %1$s</string>
    <string name="metadata_package_id">Package ID: %1$s</string>
    <string name="metadata_source">Source: %1$s</string>
    <string name="metadata_subjects">Subjects: %1$s</string>
    <string name="metadata_subtitle">Subtitle: %1$s</string>
    <string name="metadata_title">Title: %1$s</string>
    <string name="page_list">Page List</string>
    <string name="page_x_of_y">Page %1$s of %2$s</string>
    <string name="spine_items">Spine Items</string>
    <string name="table_of_contents">Table of Contents</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="left">&lt;&lt;</string>
    <string name="right">&gt;&gt;</string>
    <string name="fontSize">Text Size</string>
    <string name="marginWidth">Margin Width</string>
    <string name="columnGap">Column gap</string>
    <string name="syntheticSpread">Column Layout</string>
    <string name="textAlignment">Text Alignment</string>
    <string name="justifiedText">Justified Text</string>
    <string name="mediaOverlay">Media Overlay</string>
    <string name="tapToPlay">Tap to Play</string>
    <string name="menu_mo_previous">Previous</string>
    <string name="menu_mo_next">Next</string>
    <string name="menu_mo_play">Play</string>
    <string name="menu_mo_pause">Pause</string>
    <string name="auto">Default</string>
    <string name="single">1 Column</string>
    <string name="double_">2 Column</string>
    <string name="scrollMode">Scroll Mode</string>
    <string name="theme">Theme</string>
    <string name="theme_default">Default</string>
    <string name="theme_night">Night</string>
    <string name="theme_sepia">Sepia</string>
</resources>