<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="20dp">

            <TextView android:text="@string/fontSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/listSeparatorTextViewStyle"
                android:paddingLeft="8dp"/>

            <NumberPicker android:hint="@string/fontSize"
                android:id="@+id/fontSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp" />



            <TextView android:text="@string/marginWidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/listSeparatorTextViewStyle"
                android:paddingLeft="8dp"/>

            <NumberPicker android:hint="@string/marginWidth"
                android:id="@+id/marginWidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp" />



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/syntheticSpread"
                        android:id="@+id/textView"
                        style="?android:attr/listSeparatorTextViewStyle"
                        android:ellipsize="end"
                        android:lines="1" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp"
                        android:id="@+id/spreadSettings">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/auto"
                            android:id="@+id/spreadAuto"
                            android:layout_weight="1"
                            android:checked="true" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/single"
                            android:id="@+id/spreadSingle"
                            android:layout_weight="1" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/double_"
                            android:id="@+id/spreadDouble"
                            android:singleLine="false"
                            android:layout_weight="1" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp">

                    <TextView
                        style="?android:attr/listSeparatorTextViewStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/theme"
                        android:id="@+id/textView2"
                        android:ellipsize="end"
                        android:lines="1" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:orientation="vertical"
                        android:id="@+id/themeSettings">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/theme_default"
                            android:id="@+id/themeDefault"
                            android:checked="true"
                            android:layout_weight="1" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/theme_night"
                            android:id="@+id/themeNight"
                            android:layout_weight="1" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/theme_sepia"
                            android:id="@+id/themeSepia"
                            android:singleLine="false"
                            android:layout_weight="1" />
                    </RadioGroup>
                </LinearLayout>



            </LinearLayout>



            <TextView android:text="@string/textAlignment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/listSeparatorTextViewStyle"
                android:paddingLeft="8dp"/>
            <CheckBox android:id="@+id/checkbox_justified_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/justifiedText"/>

            <TextView android:text="@string/mediaOverlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/listSeparatorTextViewStyle"
                android:paddingLeft="8dp"/>

            <CheckBox android:id="@+id/checkbox_tap_to_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tapToPlay"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
