<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_book_search"
        android:title="@string/menu_book_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/menu_book_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/menu_book_settings"
        android:visible="true" />


    <item
        android:id="@+id/menu_table_of_contents"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/menu_table_of_contents"
        android:visible="true" />



</menu>
